add media mixin to all components

--- a/index.html
+++ b/index.html
@@ -625,11 +625,13 @@
             />
             <label class="modal-form__label--checkbox" for="agree">
               <svg class="modal-form__icon--checkbox" width="16" height="15">
-                <use href="./images/icons.svg#icon-checkbox"></use>
+                <use class="modal-form__icon--check" href="./images/icons.svg#icon-checkbox"></use>
+                <use
+                  class="modal-form__icon--checked"
+                  href="./images/icons.svg#icon-checkbox-checked"
+                ></use>
               </svg>
-              <svg class="modal-form__icon--checked" width="16" height="15">
-                <use href="./images/icons.svg#icon-checkbox-checked"></use>
-              </svg>
+
               <span
                 >Погоджуюся з розсилкою та приймаю
                 <a href="" class="modal-form__link"> Умови договору</a></span
