add modal button close to buttons component

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
     <div data-modal class="backdrop backdrop--is-hidden">
       <div class="modal">
-        <button data-modal-close class="modal__close">
+        <button data-modal-close class="button button--close">
           <svg class="modal__icon">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
