add loading=lazy to all img

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   srcset="./images/do/do_1-l.jpg 1x, ./images/do/do_1-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                 />
-                <img src="./images/do/do_1-l.jpg" alt="працівник" />
+                <img src="./images/do/do_1-l.jpg" alt="працівник" loading="lazy" />
               </picture>
               <p class="our-job__label">Десктопні додатки</p>
             </li>
@@ -183,7 +183,7 @@
                   srcset="./images/do/do_2-l.jpg 1x, ./images/do/do_2-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                 />
-                <img src="./images/do/do_2-l.jpg" alt="працівник" />
+                <img src="./images/do/do_2-l.jpg" alt="працівник" loading="lazy" />
               </picture>
               <p class="our-job__label">Мобільні додатки</p>
             </li>
@@ -193,7 +193,7 @@
                   srcset="./images/do/do_3-l.jpg 1x, ./images/do/do_3-l@2x.jpg 2x"
                   media="(min-width:1200px)"
                 />
-                <img src="./images/do/do_3-l.jpg" alt="працівник" />
+                <img src="./images/do/do_3-l.jpg" alt="працівник" loading="lazy" />
               </picture>
               <p class="our-job__label">Дизайнерські рішення</p>
             </li>
@@ -220,7 +220,7 @@
                   media="(max-width:767px)"
                 />
 
-                <img src="images/team/1-s.jpg" alt="працівник" />
+                <img src="images/team/1-s.jpg" alt="працівник" loading="lazy" />
               </picture>
 
               <h3 class="workers-list__title">Ігор Дем'яненко</h3>
@@ -271,7 +271,7 @@
                   media="(max-width:767px)"
                 />
 
-                <img src="images/team/2-s.jpg" alt="працівник" />
+                <img src="images/team/2-s.jpg" alt="працівник" loading="lazy" />
               </picture>
               <h3 class="workers-list__title">Ольга Рєпіна</h3>
               <p class="workers-list__descr">Frontend Developer</p>
@@ -321,7 +321,7 @@
                   media="(max-width:767px)"
                 />
 
-                <img src="images/team/3-s.jpg" alt="працівник" />
+                <img src="images/team/3-s.jpg" alt="працівник" loading="lazy" />
               </picture>
               <h3 class="workers-list__title">Микола Тарасов</h3>
               <p class="workers-list__descr">Marketing</p>
@@ -371,7 +371,7 @@
                   media="(max-width:767px)"
                 />
 
-                <img src="images/team/4-s.jpg" alt="працівник" />
+                <img src="images/team/4-s.jpg" alt="працівник" loading="lazy" />
               </picture>
               <h3 class="workers-list__title">Михайло Єрмаков</h3>
               <p class="workers-list__descr">UI Designer</p>
