--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/1-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/1-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -180,7 +180,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/2-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/2-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -214,7 +214,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/3-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/3-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -247,7 +247,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/4-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/4-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -280,7 +280,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/5-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/5-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -313,7 +313,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/6-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/6-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -346,7 +346,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/7-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/7-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -379,7 +379,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/8-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/8-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
@@ -412,7 +412,7 @@
                       media="(max-width:767px)"
                     />
 
-                    <img src="./images/works/9-s.jpg" alt="Приклад роботи" />
+                    <img src="./images/works/9-s.jpg" alt="Приклад роботи" loading="lazy" />
                   </picture>
                   <div class="works-list__descr">
                     <p class="works-list__text">
